Fixed deprecated methods being used, added search for config files in a project instead of hard coded directory